// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateBranchProtection updates branch protection on \`main\` by default 1`] = `
Array [
  Array [
    Object {
      "branch": "main",
      "enforce_admins": true,
      "owner": "JasonEtco",
      "repo": "example",
      "required_pull_request_reviews": Object {},
      "required_status_checks": null,
      "restrictions": null,
    },
  ],
]
`;

exports[`updateBranchProtection updates branch protection on the provided branch 1`] = `
Array [
  Array [
    Object {
      "branch": "a-branch",
      "enforce_admins": true,
      "owner": "JasonEtco",
      "repo": "example",
      "required_pull_request_reviews": Object {},
      "required_status_checks": null,
      "restrictions": null,
    },
  ],
]
`;
